[Android] Check return value of PrintNow()

Printing job hangs on interstitial page because we ignored
the return value of print_view_manager->PrintNow(rfh), in
PrintNowInternal(), which is called in PrintNow(), we checked
if current web_contents() was showing interstitial page then
returned false.

Now we are returning false if PrintNow() returns false. So
on interstiatial page or web_contents() crashed, we can safely
terminate printing job and notify user there is something
wrong in the backend withoug confusing user.

Bug: 755373
Change-Id: I07a4a0c4204a86c849813c782481d6ee8d72ec67
Reviewed-on: https://chromium-review.googlesource.com/614658
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Commit-Queue: Shimi Zhang <ctzsm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494258}
Former-commit-id: 883520af718bb5409b6819e92534f42340ae389e